tests/error/i32_u64_match.vow
// TEST: stderr "match arm"
// TEST: error-code TypeMismatch
module I32U64Match

fn pick(c: bool, x: i32, y: u64) -> u64 {
  match c {
    true => y,
    false => x,
  }
}

fn main() -> i32 {
  0
}
